--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,52 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/2.0/configuration-reference
+
 version: 2.1
 
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
-    docker:
-      - image: cimg/base:stable
-    # Add steps to the job
-    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
+  build-docker-image:
+        description:Build a docker image
     steps:
       - checkout
+      - gcr/gcr-auth
       - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
-
-# Invoke jobs via workflows
-# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
+          name: Build an image
+          command: |
+          docker build -t asia.gcr.io/socket-stg-327511/baas-boilerplate-app:v1
+   push-docker-image:
+        description:push a docker image
+    steps:
+      - checkout
+      - gcr/gcr-auth
+      - run:
+          name: push an image
+          command: |
+          docker push asia.gcr.io/socket-stg-327511/baas-boilerplate-app:v1
+   deploy-service:
+    description: Deploy application to Google Kubernetes Engine
+    steps:
+      # Make a cluster
+      #Make a deployment.yaml file and service.yaml file
+      #getting service 
+      - run:
+          name:create cluster
+          command: |
+          gcloud container cluster create baas-boilerplate
+          --num nodes 1 \
+          --enable-basic-auth \
+          --zone us-central1-a
+       -run:
+            name:deployment-and-services
+            command: |
+           kubectl apply -f deployment.yaml
+           kubectl apply -f service.yaml
+        -run:
+            name:get-service
+            command: |
+            kubectl get services
+      
+            
 workflows:
-  say-hello-workflow:
+  build-workflow:
     jobs:
-      - say-hello
+      - build-docker-image
+      -push-docker-image
+      -deploy-service
