--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
         description:Build a docker image
     steps:
       - checkout
-     
+     -gcr/gcr-auth
       - run:
           name: Build an image
           command: |
@@ -14,7 +14,7 @@ jobs:
         description:push a docker image
     steps:
       - checkout
-      
+      -gcr/gcr-auth
       - run:
           name: push an image
           command: |
