--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,6 +1,7 @@
 
 version:2.1
 jobs:
+
   build-docker-image:
         description:Build a docker image
     steps:
@@ -10,6 +11,14 @@ jobs:
           name: Build an image
           command: |
           docker build -t asia.gcr.io/socket-stg-327511/baas-boilerplate-app:v1
+    google-auth:
+    description:google autorisation command
+    steps:
+    -run:
+    name:google authorisation
+    command: |
+    gcloud auth print-access-token | docker login -u oauth2accesstoken --password-stdin https://asia.gcr.io
+
    push-docker-image:
         description:push a docker image
     steps:
