--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,23 @@
 
 version:2.1
 orbs:
-gcp-gke: circleci/gcp-gke@1.1.0
-  gcr: circleci/gcp-gcr@0.0.2
+google-github-actions/auth@v0.4.0
+  with:
+    token_format: access_token
+    workload_identity_provider: projects/123456789/locations/global/workloadIdentityPools/my-pool/providers/my-provider
+    service_account: my-service-account@my-project.iam.gserviceaccount.com
+    create_credentials_file: true
+    access_token_lifetime: 3600s
+    access_token_scopes: https://www.googleapis.com/auth/cloud-platform
+    id_token_include_email: false
+  env:
+    PROJECT_ID: 
+    GAR_LOCATION: us-central1
+    GKE_CLUSTER: cluster-1
+    GKE_ZONE: us-central1-c
+    DEPLOYMENT_NAME: gke-test
+    REPOSITORY: samples
+    IMAGE: static-site
 jobs:
 
   build-docker-image:
