--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,8 +4,8 @@ orbs:
 google-github-actions/auth@v0.4.0
   with:
     token_format: access_token
-    workload_identity_provider: projects/123456789/locations/global/workloadIdentityPools/my-pool/providers/my-provider
-    service_account: my-service-account@my-project.iam.gserviceaccount.com
+    workload_identity_provider: baas-boilerplate-app-sha256-1: asia.gcr.io/socket-stg-327511/baas-boilerplate-app@sha256:59c82114ab899886009d0efb8125ab64d8e728079bf5c1c6defe8557d9b3818e
+    
     create_credentials_file: true
     access_token_lifetime: 3600s
     access_token_scopes: https://www.googleapis.com/auth/cloud-platform
