--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,13 +4,6 @@ orbs:
   gcp-gke: circleci/gcp-gke@0.1.0
   gcr: circleci/gcp-gcr@0.0.2
 jobs:
-  build:
-    description: Install npm
-    machine: true
-    steps:
-      - checkout
-      - node/install
-      - node/install-npm
      
   Build-Push-Image-Docker:
     description: Build and push image a docker image
@@ -39,10 +32,8 @@ jobs:
 workflows:
   build_update_deploy:
     jobs:
-      - build
-      - Build-Push-Image-Docker:
-          requires:
-            - build
+      
+      - Build-Push-Image-Docker
       - deploy:
           requires:
             - Build-Push-Image-Docker
