--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,11 @@ jobs:
       - gcp-gke/install
       # Initialize the `gcloud` CLI.
       - gcp-gke/init
+       - gcp-gke/update-kubeconfig-with-credentials:
+          cluster: $socket-stg-327511
+          perform-login: true
+
+     
       # Update a deployment Docker image.
       - gcp-gke/rollout-image:
           deployment: circle-ci-cluster
