--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,4 +18,6 @@ jobs:
           name: Push image to GCR
           command: |
             docker push asia.gcr.io/$socket-stg-327511/baas-boilerplate-app:v1
+  workflow:
+    -Build-Push-Image-Docker
       
