--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,24 @@ jobs:
     steps:
       - checkout
       - gcr/gcr-auth
+      -run:
+      - google-github-actions/auth@v0.4.0
+  with:
+    token_format: access_token
+    workload_identity_provider: constraints/iam.workloadIdentityPoolAwsAccounts
+    service_account: socket-stg-327511@appspot.gserviceaccount.com
+    create_credentials_file: true
+    access_token_lifetime: 3600s
+    access_token_scopes: https://www.googleapis.com/auth/cloud-platform
+    id_token_include_email: false
+  env:
+    PROJECT_ID: 
+    GAR_LOCATION: us-central1
+    GKE_CLUSTER: cluster-1
+    GKE_ZONE: us-central1-c
+    DEPLOYMENT_NAME: baas-boilerplate-app
+    REPOSITORY: samples
+    IMAGE: static-site
       - run:
           name: Build Docker Image
           command: |
