--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,44 +1,44 @@
 version: 2.1
 orbs:
-  gcp-gke: circleci/gcp-gke@1.1.0
+  node: circleci/node@1.0.1
+  gcp-gke: circleci/gcp-gke@0.1.0
   gcr: circleci/gcp-gcr@0.0.2
-  
 jobs:
+     
   Build-Push-Image-Docker:
-    description: Build and push image to Google Container
+    description: Build and push image a docker image
     machine: true
     steps:
       - checkout
       - gcr/gcr-auth
-
-      - run:
+            - run:
           name: Build Docker Image
           command: |
-            docker build -t asia.gcr.io/$socket-stg-327511/baas-boilerplate-app:v1
+            docker build -t asia.gcr.io/$socket-stg-327511/baas-boilerplate-app:v1 
       - run:
           name: Push image to GCR
           command: |
             docker push asia.gcr.io/$socket-stg-327511/baas-boilerplate-app:v1
-   Deploy-to-GKE:
-    description: Deploy application to Google Kubernetes Engine
+
+    
+  deploy:
+    description: Deploy application
     machine: true
     steps:
-      # Install `gcloud` and `kubectl` if not already installed.
+     
       - gcp-gke/install
-      # Initialize the `gcloud` CLI.
-      - gcp-gke/update-kubeconfig-with-credentials:
-          cluster: $GOOGLE_CLUSTER_ID
-          perform-login: true
-
-      - add_ssh_keys:
-          fingerprints:
-            - $GOOGLE_SSH_KEY
-
-  workflows:
-  Build_Deploy:
+      - gcp-gke/init
+      - gcp-gke/rollout-image:
+          deployment: baas-boilerplate-app
+          container: baas-boilerplate-app
+          image: asia.gcr.io/socket-stg-327511/baas-boilerplate-app:v1
+workflows:
+  build_update_deploy:
     jobs:
-      - Build-Push-Image-Docker:
-       - Deploy-to-GKE:
+      
+      - Build-Push-Image-Docker
+      - deploy:
           requires:
             - Build-Push-Image-Docker
+
       
